[gd_scene load_steps=3 format=2]

[ext_resource path="res://ExpBar/ExpBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://TestExp.gd" type="Script" id=2]

[node name="Welcome" type="Node"]

[node name="TestExp" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="TestExp"]
margin_left = 136.185
margin_top = 82.7946
margin_right = 203.185
margin_bottom = 102.795
text = "Add 30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpBar" parent="TestExp" instance=ExtResource( 1 )]

[node name="exit" type="Button" parent="TestExp"]
margin_right = 112.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="TestExp"]
margin_left = 250.762
margin_top = 18.2752
margin_right = 315.762
margin_bottom = 38.2752
text = "reset"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TestExp/Button" to="TestExp" method="_on_Button_pressed"]
[connection signal="pressed" from="TestExp/exit" to="TestExp" method="_on_exit_pressed"]
[connection signal="pressed" from="TestExp/Button2" to="TestExp" method="_on_Button2_pressed"]
